--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-sass": "^6.0.0",
+    "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.83.4"
   }
 }
